DT-1991  Fix footer paddings on smaller screen

--- a/less/plugins/blog/blog-post.less
+++ b/less/plugins/blog/blog-post.less
@@ -247,3 +247,14 @@
         }
     }
 }
+
+@media only screen and (min-width : 890px) and (max-width : 1500px) {
+    .blogpost__post-footer {
+        padding: 0 1.5em;
+
+        .timestamp {
+            border-left: none;
+            padding-left: 0;
+        }
+    }
+}
